# sway-new-workspace

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  tests.rs
