[package]
name = "sway-new-workspace"
version = "0.1.3"
edition = "2021"
description = "A command to create new Sway workpaces"
authors = ["Nadav Zingerman <7372858+nzig@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/nzig/sway-new-workspace/"

[dependencies]
swayipc = "2.7"
clap = "3.0.0"
