[package]
name = "sway-new-workspace"
version = "0.1.4"
edition = "2021"
description = "A command to create new Sway workpaces"
authors = ["Nadav Zingerman <7372858+nzig@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/nzig/sway-new-workspace/"

[dependencies]
swayipc = "3.0"
clap = {version = "3.1.1", features = ["cargo"]}
